--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,4 @@ import(methods)
 import(rstantools)
 importFrom(magrittr,"%>%")
 importFrom(rstan,sampling)
-useDynLib(rstanemax, .registration = TRUE)
+useDynLib(rDILI, .registration = TRUE)
